--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 django-debug-toolbar==3.2.1
 django-hosts==4.0
 djangorestframework==3.12.4
+djangorestframework-camel-case==1.2.0
 google-api-python-client==2.15.0
 google-auth==1.34.0
 google-auth-httplib2==0.1.0
